--- a/writing/Concentrations_Notes/ref.bib
+++ b/writing/Concentrations_Notes/ref.bib
@@ -1,3 +1,28 @@
+@article{szorenyi_qualitative_nodate,
+	title = {Qualitative {Multi}-{Armed} {Bandits}: {A} {Quantile}-{Based} {Approach}},
+	abstract = {We formalize and study the multi-armed bandit (MAB) problem in a generalized stochastic setting, in which rewards are not assumed to be numerical. Instead, rewards are measured on a qualitative scale that allows for comparison but invalidates arithmetic operations such as averaging. Correspondingly, instead of characterizing an arm in terms of the mean of the underlying distribution, we opt for using a quantile of that distribution as a representative value. We address the problem of quantile-based online learning both for the case of a ﬁnite (pure exploration) and inﬁnite time horizon (cumulative regret minimization). For both cases, we propose suitable algorithms and analyze their properties. These properties are also illustrated by means of ﬁrst experimental studies.},
+	language = {en},
+	author = {Szorenyi, Balazs and Busa-Fekete, Róbert and Weng, Paul and Hüllermeier, Eyke},
+	pages = {16},
+	annote = {results for searching: quantile bandits
+ICML2015
+quantile can be used for qualitative reward
+applications mentioned
+bounding estimation error for quantiles (Prop 1)
+Provide finite(PAC)/ infinite analysis
+ 
+READ on 21/08/2019},
+	file = {Szorenyi et al. - Qualitative Multi-Armed Bandits A Quantile-Based .pdf:/home/mengyan/Zotero/storage/ALG6UMX8/Szorenyi et al. - Qualitative Multi-Armed Bandits A Quantile-Based .pdf:application/pdf}
+}
+
+@unknown{Howard2019,
+author = {Howard, Steven and Ramdas, Aaditya},
+year = {2019},
+month = {06},
+pages = {},
+title = {Sequential estimation of quantiles with applications to A/B-testing and best-arm identification}
+}
+
 @article{kolla_concentration_2019,
 	title = {Concentration bounds for empirical conditional value-at-risk: {The} unbounded case},
 	volume = {47},
