--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -555,6 +555,18 @@
   number = {2}
 }
 
+@article{naumovExponentiallyWeightedSimultaneous2007,
+  title = {Exponentially {{Weighted Simultaneous Estimation}} of {{Several Quantiles}}},
+  author = {Naumov, Valeriy and Martikainen, Olli},
+  year = {2007},
+  volume = {1},
+  pages = {6},
+  abstract = {In this paper we propose new method for simultaneous generating multiple quantiles corresponding to given probability levels from data streams and massive data sets. This method provides a basis for development of single-pass low-storage quantile estimation algorithms, which differ in complexity, storage requirement and accuracy. We demonstrate that such algorithms may perform well even for heavy-tailed data.},
+  file = {/Users/sue/Zotero/storage/258MJ79V/Naumov and Martikainen - 2007 - Exponentially Weighted Simultaneous Estimation of .pdf},
+  language = {en},
+  number = {8}
+}
+
 @article{ouyangStochasticSmoothingNonsmooth2012,
   title = {Stochastic {{Smoothing}} for {{Nonsmooth Minimizations}}: {{Accelerating SGD}} by {{Exploiting Structure}}},
   shorttitle = {Stochastic {{Smoothing}} for {{Nonsmooth Minimizations}}},
@@ -647,6 +659,25 @@
   keywords = {Mathematics - Statistics Theory},
   language = {en},
   number = {1}
+}
+
+@article{stephanouSequentialQuantilesHermite2017,
+  title = {Sequential Quantiles via {{Hermite}} Series Density Estimation},
+  author = {Stephanou, Michael and Varughese, Melvin and Macdonald, Iain},
+  year = {2017},
+  volume = {11},
+  pages = {570--607},
+  publisher = {{The Institute of Mathematical Statistics and the Bernoulli Society}},
+  issn = {1935-7524},
+  doi = {10.1214/17-EJS1245},
+  abstract = {Sequential quantile estimation refers to incorporating observations into quantile estimates in an incremental fashion thus furnishing an online estimate of one or more quantiles at any given point in time. Sequential quantile estimation is also known as online quantile estimation. This area is relevant to the analysis of data streams and to the one-pass analysis of massive data sets. Applications include network traffic and latency analysis, real time fraud detection and high frequency trading. We introduce new techniques for online quantile estimation based on Hermite series estimators in the settings of static quantile estimation and dynamic quantile estimation. In the static quantile estimation setting we apply the existing Gauss-Hermite expansion in a novel manner. In particular, we exploit the fact that Gauss-Hermite coefficients can be updated in a sequential manner. To treat dynamic quantile estimation we introduce a novel expansion with an exponentially weighted estimator for the Gauss-Hermite coefficients which we term the Exponentially Weighted Gauss-Hermite (EWGH) expansion. These algorithms go beyond existing sequential quantile estimation algorithms in that they allow arbitrary quantiles (as opposed to pre-specified quantiles) to be estimated at any point in time. In doing so we provide a solution to online distribution function and online quantile function estimation on data streams. In particular we derive an analytical expression for the CDF and prove consistency results for the CDF under certain conditions. In addition we analyse the associated quantile estimator. Simulation studies and tests on real data reveal the Gauss-Hermite based algorithms to be competitive with a leading existing algorithm.},
+  file = {/Users/sue/Zotero/storage/CKTPVDK2/Stephanou et al. - 2017 - Sequential quantiles via Hermite series density es.pdf},
+  journal = {Electronic Journal of Statistics},
+  keywords = {online distribution function estimation,online quantile estimation,sequential distribution function estimation,Sequential quantile estimation},
+  language = {EN},
+  mrnumber = {MR3619317},
+  number = {1},
+  zmnumber = {1392.62243}
 }
 
 @article{tierneySpaceEfficientRecursiveProcedure1983,
