Experiment results update

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -218,23 +218,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_stepsize(k, stepsize, length):\n",
+    "# def set_stepsize(k, stepsize, length):\n",
+    "#     if stepsize=='const':\n",
+    "#         return 1 * np.ones(length)\n",
+    "#     elif stepsize=='2_div_sqrt_k':\n",
+    "#         return 2/math.sqrt(k)* np.ones(length)\n",
+    "#     elif stepsize=='0.002_div_sqrt_k':\n",
+    "#         return 0.002/math.sqrt(k) * np.ones(length)\n",
+    "#     raise Exception('stepsize parameter is wrong')\n",
+    "    \n",
+    "    \n",
+    "def set_stepsize(k, stepsize):\n",
     "    if stepsize=='const':\n",
-    "        return 1 * np.ones(length)\n",
+    "        return 1\n",
     "    elif stepsize=='2_div_sqrt_k':\n",
-    "        return 2/math.sqrt(k)* np.ones(length)\n",
+    "        return 2/math.sqrt(k)\n",
     "    elif stepsize=='0.002_div_sqrt_k':\n",
-    "        return 0.002/math.sqrt(k) * np.ones(length)\n",
+    "        return 0.002/math.sqrt(k)\n",
     "    raise Exception('stepsize parameter is wrong')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
