update and Multi.ipynb changed for the P2 algorithm

--- a/QuantEst/sgd_est_experiment/Experiment_final_change_stepsize.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final_change_stepsize.ipynb
@@ -23,6 +23,8 @@
     "\n",
     "import math\n",
     "import numpy as np\n",
+    "import pathlib\n",
+    "\n",
     "# import matplotlib.pyplot as plt\n",
     "# import matplotlib.colors as colors\n",
     "# import matplotlib.cm as cmx\n",
@@ -222,24 +224,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def set_stepsize(k, stepsize, length):\n",
-    "#     if stepsize=='const':\n",
-    "#         return 1 * np.ones(length)\n",
-    "#     elif stepsize=='2_div_sqrt_k':\n",
-    "#         return 2/math.sqrt(k)* np.ones(length)\n",
-    "#     elif stepsize=='0.002_div_sqrt_k':\n",
-    "#         return 0.002/math.sqrt(k) * np.ones(length)\n",
-    "#     raise Exception('stepsize parameter is wrong')\n",
-    "    \n",
-    "    \n",
-    "def set_stepsize(k, stepsize):\n",
+    "def set_stepsize(k, stepsize, length):\n",
     "    if stepsize=='const':\n",
-    "        return 1\n",
+    "        return 1 * np.ones(length)\n",
     "    elif stepsize=='2_div_sqrt_k':\n",
-    "        return 2/math.sqrt(k)\n",
+    "        return 2/math.sqrt(k)* np.ones(length)\n",
     "    elif stepsize=='0.002_div_sqrt_k':\n",
-    "        return 0.002/math.sqrt(k)\n",
-    "    raise Exception('stepsize parameter is wrong')"
+    "        return 0.002/math.sqrt(k) * np.ones(length)\n",
+    "    raise Exception('stepsize parameter is wrong')\n",
+    "    \n",
+    "    \n",
+    "# def set_stepsize(k, stepsize):\n",
+    "#     if stepsize=='const':\n",
+    "#         return 1\n",
+    "#     elif stepsize=='2_div_sqrt_k':\n",
+    "#         return 2/math.sqrt(k)\n",
+    "#     elif stepsize=='0.002_div_sqrt_k':\n",
+    "#         return 0.002/math.sqrt(k)\n",
+    "#     raise Exception('stepsize parameter is wrong')"
    ]
   },
   {
@@ -248,37 +250,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def get_procs(dataset, step_size, tau_lst):\n",
-    "#     update_size = 200\n",
-    "#     proc = np.zeros((dataset.shape[0], len(tau_lst)))\n",
-    "#     q_pre, q_arr = np.zeros(len(tau_lst)), np.zeros(len(tau_lst))\n",
-    "#     alpha_adaptation = np.ones(len(tau_lst))\n",
+    "def get_procs(dataset, step_size, tau_lst):\n",
+    "    update_size = 200\n",
+    "    proc = np.zeros((dataset.shape[0], len(tau_lst)))\n",
+    "    q_pre, q_arr = np.zeros(len(tau_lst)), np.zeros(len(tau_lst))\n",
+    "    alpha_adaptation = np.ones(len(tau_lst))\n",
     "\n",
-    "#     for k, x in enumerate(dataset):          \n",
-    "#         if k % update_size == 0 and k >0:\n",
-    "# #             print (k,q_arr-q_pre)\n",
-    "#             update_var = update_stepsize(alpha_arr, q_arr-q_pre, step_size, update_size)\n",
+    "    for k, x in enumerate(dataset):          \n",
+    "        if k % update_size == 0 and k >0:\n",
+    "#             print (k,q_arr-q_pre)\n",
+    "            update_var = update_stepsize(alpha_arr, q_arr-q_pre, step_size, update_size)\n",
     "#             print ('update_var', update_var)\n",
-    "#             alpha_adaptation = alpha_adaptation * update_var\n",
-    "# #             print ('alpha_adaptation', alpha_adaptation)\n",
-    "#             q_pre = [i for i in q_arr]\n",
-    "#         if step_size != 'frugal': \n",
-    "#             alpha_arr = set_stepsize(k+1, step_size, len(tau_lst))* alpha_adaptation\n",
-    "# #             if k % update_size == 0: print('alpha_arr', alpha_arr)\n",
-    "#         for i, q in enumerate(q_arr):\n",
-    "#             tau = tau_lst[i]\n",
-    "#             alpha = alpha_arr[i]\n",
-    "#             if step_size != 'frugal':\n",
-    "#                 q = sgd(q, x, tau, alpha)\n",
-    "#             else: \n",
-    "#                 q = frugal(q, x, tau)\n",
-    "#             q_arr[i] = q\n",
-    "#         proc[k] = q_arr\n",
-    "# #     print (alpha_arr)\n",
-    "#     return proc.T\n",
+    "            alpha_adaptation = alpha_adaptation * update_var\n",
+    "#             print ('alpha_adaptation', alpha_adaptation)\n",
+    "            q_pre = [i for i in q_arr]\n",
+    "        if step_size != 'frugal': \n",
+    "            alpha_arr = set_stepsize(k+1, step_size, len(tau_lst))* alpha_adaptation\n",
+    "#             if k % update_size == 0: print('alpha_arr', alpha_arr)\n",
+    "        for i, q in enumerate(q_arr):\n",
+    "            tau = tau_lst[i]\n",
+    "            alpha = alpha_arr[i]\n",
+    "            if step_size != 'frugal':\n",
+    "                q = sgd(q, x, tau, alpha)\n",
+    "            else: \n",
+    "                q = frugal(q, x, tau)\n",
+    "            q_arr[i] = q\n",
+    "        proc[k] = q_arr\n",
+    "#     print (alpha_arr)\n",
+    "    return proc.T\n",
     "   \n",
-    "# # def set_stepsize(idx, step_size, len_arr):\n",
-    "# #     return np.ones(len_arr)*10\n",
+    "# def set_stepsize(idx, step_size, len_arr):\n",
+    "#     return np.ones(len_arr)*10\n",
     "\n",
     "\n",
     "# def update_stepsize(alpha_arr, diff, step_size, update_size):\n",
@@ -289,21 +291,30 @@
     "#         elif a * update_size * 0.05 > abs(d): update_var[i] = 1/2\n",
     "# #     print ('step_size', update_var)\n",
     "#     return update_var\n",
+    "\n",
+    "def update_stepsize(alpha_arr, diff, step_size, update_size):\n",
+    "    update_var = np.ones(len(diff))\n",
+    "    for i, a in enumerate(alpha_arr):\n",
+    "        d = diff[i]\n",
+    "        if a * update_size * 0.25 < abs(d): update_var[i] = 2\n",
+    "        elif a * update_size * 0.02 > abs(d): update_var[i] = 1/2\n",
+    "#     print ('step_size', update_var)\n",
+    "    return update_var\n",
     "    \n",
-    "# def sgd(q, x, tau, alpha):\n",
-    "#     if x > q:\n",
-    "#         q = q + alpha*tau\n",
-    "#     else:\n",
-    "#         q = q - alpha*(1-tau)  \n",
-    "#     return q\n",
+    "def sgd(q, x, tau, alpha):\n",
+    "    if x > q:\n",
+    "        q = q + alpha*tau\n",
+    "    else:\n",
+    "        q = q - alpha*(1-tau)  \n",
+    "    return q\n",
     "    \n",
-    "# def frugal(q, x, tau):\n",
-    "#     rdn = np.random.uniform()\n",
-    "#     if x > q and rdn > 1-tau:\n",
-    "#         q += 1\n",
-    "#     elif x < q and rdn > tau:\n",
-    "#         q -= 1\n",
-    "#     return q"
+    "def frugal(q, x, tau):\n",
+    "    rdn = np.random.uniform()\n",
+    "    if x > q and rdn > 1-tau:\n",
+    "        q += 1\n",
+    "    elif x < q and rdn > tau:\n",
+    "        q -= 1\n",
+    "    return q"
    ]
   },
   {
@@ -312,36 +323,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_procs(dataset, step_size, tau_lst):\n",
-    "    if len(dataset.shape)!= 1: \n",
-    "        raise Exception('Dataset for get_procs() of wrong shape:' + str(dataset.shape)+ ', should be 1d array')\n",
+    "# def get_procs(dataset, step_size, tau_lst):\n",
+    "#     if len(dataset.shape)!= 1: \n",
+    "#         raise Exception('Dataset for get_procs() of wrong shape:' + str(dataset.shape)+ ', should be 1d array')\n",
     "        \n",
-    "    procs = np.zeros((len(tau_lst), dataset.shape[0]))\n",
-    "    for idx, tau in enumerate(tau_lst):\n",
-    "        q = 0\n",
-    "        q_sgd_proc = procs[idx]\n",
-    "        # change stepsize\n",
-    "        if step_size != 'frugal':\n",
-    "            for k, x in enumerate(dataset):\n",
-    "#                 if idx==1: print (k, ':', q)\n",
-    "                alpha = set_stepsize(k+1, step_size)\n",
-    "                if x > q:\n",
-    "                    q = q + alpha*tau\n",
-    "                else:\n",
-    "                    q = q - alpha*(1-tau)\n",
-    "                q_sgd_proc[k] = q\n",
+    "#     procs = np.zeros((len(tau_lst), dataset.shape[0]))\n",
+    "#     for idx, tau in enumerate(tau_lst):\n",
+    "#         q = 0\n",
+    "#         q_sgd_proc = procs[idx]\n",
+    "#         # change stepsize\n",
+    "#         if step_size != 'frugal':\n",
+    "#             for k, x in enumerate(dataset):\n",
+    "# #                 if idx==1: print (k, ':', q)\n",
+    "#                 alpha = set_stepsize(k+1, step_size)\n",
+    "#                 if x > q:\n",
+    "#                     q = q + alpha*tau\n",
+    "#                 else:\n",
+    "#                     q = q - alpha*(1-tau)\n",
+    "#                 q_sgd_proc[k] = q\n",
     "        \n",
-    "        # frugal\n",
-    "        else:\n",
-    "            rdn_lst = np.random.uniform(0,1, dataset.shape[0])\n",
-    "            for k, x in enumerate(dataset):\n",
-    "                rdn = rdn_lst[k]\n",
-    "                if x > q and rdn > 1-tau:\n",
-    "                    q += 1\n",
-    "                elif x < q and rdn > tau:\n",
-    "                    q -= 1\n",
-    "                q_sgd_proc[k] = q\n",
-    "    return procs"
+    "#         # frugal\n",
+    "#         else:\n",
+    "#             rdn_lst = np.random.uniform(0,1, dataset.shape[0])\n",
+    "#             for k, x in enumerate(dataset):\n",
+    "#                 rdn = rdn_lst[k]\n",
+    "#                 if x > q and rdn > 1-tau:\n",
+    "#                     q += 1\n",
+    "#                 elif x < q and rdn > tau:\n",
+    "#                     q -= 1\n",
+    "#                 q_sgd_proc[k] = q\n",
+    "#     return procs"
    ]
   },
   {
@@ -443,6 +454,8 @@
     "# write_data_overview('ca', 'se', tau_vals, \"try.txt\")\n",
     "    \n",
     "def save_data(foldername, file_name, tau_lst, data_dict):\n",
+    "    print (\"save data folder name\", foldername)\n",
+    "    pathlib.Path(foldername).mkdir(parents=True, exist_ok=True) \n",
     "    category, setting = file_name[0], file_name[1]    \n",
     "    write_data_overview(category, setting, tau_lst, foldername+str(setting)+\"_\"+\"overview.txt\")\n",
     "\n",
@@ -452,6 +465,7 @@
     "        \n",
     "    return\n",
     "\n",
+    "# save_data(np.random.uniform(0, 1, 100), 'Experiment_results/Adaptive_stepsize/distro/mix_overview.txt')\n",
     "# save_data('', ('C', 'S'), tau_vals, {'dataset': np.reshape(np.random.uniform(0, 4, 100), (2, 5, 10))})"
    ]
   },
@@ -470,9 +484,9 @@
    "source": [
     "def get_file_name(changed_setting, distro, datasize, stepsize, s_test):\n",
     "#     print(changed_setting)\n",
-    "    if s_test:\n",
-    "        return ('Shuffle', True)\n",
-    "    elif changed_setting=='distro':\n",
+    "#     if s_test:\n",
+    "#         return ('Shuffle', True)\n",
+    "    if changed_setting=='distro':\n",
     "        return ('Distribution', distro)\n",
     "    elif changed_setting=='data_size':\n",
     "        return ('Data size', datasize)\n",
@@ -535,20 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequance']        \n",
+    "sgd_lst = ['data_size']        \n",
     "\n",
     "def all_sgd_comparisons(sgd_lst):\n",
     "    for t in sgd_lst:\n",
     "        print (t)\n",
-    "        folder_name = \"Experiment_results/SGD/\"+t+\"/\"\n",
+    "        folder_name = \"Experiment_results/Adaptive_stepsize/\"+t+\"/\"\n",
     "        if t=='distro':\n",
     "            quantile_sgd_compare(folder_name, distros, [1000], ['const'], True)\n",
     "        elif t=='data_size':\n",
-    "            quantile_sgd_compare(folder_name, ['gau_2'], [100, 1000, 10000], ['const'], True)\n",
+    "            quantile_sgd_compare(folder_name, ['gau_2'], [1000, 10000], ['const'], True)\n",
     "        elif t=='step_size':\n",
     "            quantile_sgd_compare(folder_name, ['gau_1'], [1000], stepsizes, True)\n",
     "        elif t=='data_sequence':\n",
@@ -558,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -566,30 +580,26 @@
      "output_type": "stream",
      "text": [
       "data_size\n",
-      "[['gau_2' '100' 'const']\n",
-      " ['gau_2' '1000' 'const']\n",
+      "[['gau_2' '1000' 'const']\n",
       " ['gau_2' '10000' 'const']]\n",
-      "Experiment_results/SGD/data_size/100_q_true.txt\n",
-      "Experiment_results/SGD/data_size/100_q_batches.txt\n",
-      "Experiment_results/SGD/data_size/100_q_est_res.txt\n",
-      "Experiment_results/SGD/data_size/100_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/100_E.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_true.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_batches.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_est_res.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/1000_E.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_true.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_batches.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_est_res.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/10000_E.txt\n"
+      "save data folder name Experiment_results/Adaptive_stepsize/data_size/\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_q_true.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_q_batches.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_q_est_res.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_q_est_proc.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_E.txt\n",
+      "save data folder name Experiment_results/Adaptive_stepsize/data_size/\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_q_true.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_q_batches.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_q_est_res.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_q_est_proc.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_E.txt\n"
      ]
     }
    ],
    "source": [
     "# Run all functions\n",
-    "all_sgd_comparisons([\"data_size\"])"
+    "all_sgd_comparisons(sgd_lst)"
    ]
   },
   {
